discussion/kv_engine/184675/184675_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: Add setHistoryRetentionBytes to KVStore

Implemented only in magma-kvstore.cc and calls through to
SetHistoryRetentionBytes

Change-Id: I597f444add833c77180ae4bb07ce7ee94a788530

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-17 09:29:52.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-17 09:30:06.000000000
Message: 
Patch Set 6: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/332809/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-17 10:23:02.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/836/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2884:18: error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
    case Status::RangeNotFound:
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30: error: unknown type name "Mode" [clang-diagnostic-error]
                             Mode mode) override;
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/836/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2884:18:
error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/836/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1014/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-memory-tracking-proxy.h(53): error C2061: syntax error: identifier "Mode" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1014/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/807/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/807/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/842/ : FAILURE

Compile error at [2023-01-17T09:58:25.455Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: ?Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/842/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/848/ : FAILURE

Compile error at [2023-01-17T10:20:39.523Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/848/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/847/ : FAILURE

Compile error at [2023-01-17T10:22:24.957Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: ?Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/847/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/828/ : FAILURE

Compile error at [2023-01-17T10:21:18.959Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/828/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/857/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Missing stat:  ep_magma_value_separation_size from stat group 
[2023-01-17T10:10:09.604Z] Missing stat:  ep_magma_value_separation_size from stat group config
[2023-01-17T10:10:09.604Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7880 Test failed: `stats error" (missing stats)
[2023-01-17T10:10:09.604Z] (41 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/857/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/856/ : FAILURE

Compile error at [2023-01-17T10:10:34.661Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/856/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1124/ : FAILURE

Compile error at [2023-01-17T09:56:13.596Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1124/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22224/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
